--- a/src/app/hr/component/visa-status-management/visa-status-management.component.html
+++ b/src/app/hr/component/visa-status-management/visa-status-management.component.html
@@ -2,39 +2,29 @@
        [dataSource]="dataSource" multiTemplateDataRows
        class="mat-elevation-z8">
 
-  <!-- <ng-container matColumnDef="{{column}}" *ngFor="let column of columnsToDisplay">
-    <th mat-header-cell *matHeaderCellDef> {{column}} </th>
-    <td mat-cell *matCellDef="let element"> {{element[column]}} </td>
-  </ng-container> -->
-
-  <!-- Position Column -->
   <ng-container matColumnDef="full name">
     <th mat-header-cell *matHeaderCellDef> Full Name </th>
     <td mat-cell *matCellDef="let element"> {{element.firstName}} {{element.middleName}} {{element.lastName}} </td>
   </ng-container>
 
-  <!-- Name Column -->
   <ng-container matColumnDef="work authorization">
     <th mat-header-cell *matHeaderCellDef> Work Authorization </th>
     <td mat-cell *matCellDef="let element"> F1/OPT </td>
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="expiration date">
     <th mat-header-cell *matHeaderCellDef> Expiration Date </th>
     <td mat-cell *matCellDef="let element"> {{element.visaEndDate}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="day left">
     <th mat-header-cell *matHeaderCellDef> Day Left </th>
-    <td mat-cell *matCellDef="let element"> {{element.visaEndDate}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.dayLeft}} </td>
   </ng-container>
 
-  <!-- Weight Column -->
   <ng-container matColumnDef="action required">
     <th mat-header-cell *matHeaderCellDef> Action Required </th>
-    <td mat-cell *matCellDef="let element"> {{element.nextStep}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.action}} </td>
   </ng-container>
   
 
@@ -43,16 +33,22 @@
     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
       <div class="example-element-detail"
            [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-        <!-- <div class="example-element-diagram">
-          <div class="example-element-position"> {{element.position}} </div>
-          <div class="example-element-symbol"> {{element.symbol}} </div>
-          <div class="example-element-name"> {{element.name}} </div>
-          <div class="example-element-weight"> {{element.weight}} </div>
-        </div> -->
-        <div class="example-element-description">
-          {{element.email}}
-          <span class="example-element-description-attribution"> -- Wikipedia </span>
-        </div>
+           <div class="example-element-diagram">
+                <div class="example-element-name"> Name: {{element.firstName}} {{element.middleName}} {{element.lastName}}</div>
+                <div class="example-element-name"> Visa: F1/OPT </div>
+                <div class="example-element-name"> Start Date: {{element.visaStartDate}} </div>
+                <div class="example-element-name"> End Date: {{element.visaEndDate}} </div>
+            </div>
+           <div class="example-element-description">
+                <p>Document Received: </p> 
+                <div *ngFor="let personalDocument of element.personalDocuments">
+                    <p><a href = {{personalDocument.path}}>{{personalDocument.title}}</a>  {{ personalDocument.createdDate }} </p>
+                </div>
+                <p>Next Step: {{element.nextStep}}</p> 
+                <button (click)="onSendNotification(element.userId, element.email, element.nextStep)" *ngIf="element.action == 'Send Notification'">Send Notification</button>
+                <app-s3-doc-uploader *ngIf="element.action=='Sign I-983'" label="Please Upload Signed I-983" (docUploadedToS3Event)='onloadingFile($event)'></app-s3-doc-uploader>
+                <button (click)="onSaveUploadedFile(element.employeeId)" *ngIf="element.action=='Sign I-983'">Save</button>
+            </div>
       </div>
     </td>
   </ng-container>
