--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav *ngIf="role==='hr'" class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">HR-HOME</a>
+    <a class="navbar-brand" routerLink="/hr">HR-HOME</a>
     <button class="navbar-toggler navbar-toggler-right" type="button" (click)="navbarCollapsed = !navbarCollapsed" [attr.aria-expanded]="!navbarCollapsed"
         aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,6 +8,12 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/hr/generate-token" routerLinkActive="active">Generate Token</a>
+            </li>
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="http://localhost:9999/auth/logout">Logout</a>
             </li>
         </ul>
     </div>
@@ -23,6 +29,12 @@
         <ul class="navbar-nav mr-auto">
             <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/employee/visa-status-management" routerLinkActive="active">Visa Status Management</a>
+            </li>
+        </ul>
+
+        <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+                <a class="nav-item nav-link" href="http://localhost:9999/auth/logout">Logout</a>
             </li>
         </ul>
     </div>
