--- a/src/app/employee/component/profile-document-section/profile-document-section.component.html
+++ b/src/app/employee/component/profile-document-section/profile-document-section.component.html
@@ -7,7 +7,7 @@
             <app-s3-doc-downloader
                 *ngIf="(document.title==='work authorization' || document.title==='drive license') && document.path"
                 [title]="document.title" 
-                [description]="document.comment" 
+                [description]="document.comment || 'No comment from HR.'" 
                 [s3FileName]="document.path.substring(document.path.lastIndexOf('/')+1)"
                 [s3FileUrl]="document.path"
             >
