--- a/src/app/hr/hr.component.html
+++ b/src/app/hr/hr.component.html
@@ -1,17 +1,6 @@
-<p>hr works!</p>
-<i class="fa fa-american-sign-language-interpreting fa-2x" aria-hidden="true"></i>
-<br>
-<fa-icon [icon]="faCoffee"></fa-icon>
-<br>
-<button class="btn btn-primary" (click)="showDialog()">Show Dialog</button>
-
-<hr>
-
-<app-s3-doc-downloader 
-    [title]="testTitle" 
-    [description]="testDescription" 
-    [s3FileName]="testS3FileName"
-    [s3FileUrl]="testS3FileUrl"
-></app-s3-doc-downloader>
-
-<app-confirm-dialog></app-confirm-dialog>  
+<div class="my-5 jumbotron jumbotron-fluid rounded">
+    <div class="container">
+      <h1 class="display-4">HR HOME PAGE</h1>
+      <p class="lead">You are authorized to manage employee onboarding application.</p>
+    </div>
+</div>
