--- a/src/app/employee/component/visa-status-management/visa-status-management.component.html
+++ b/src/app/employee/component/visa-status-management/visa-status-management.component.html
@@ -83,10 +83,10 @@
   
   <h4>Your Uploaded documents</h4>
   <div class="row">
-    <div class='m-2' *ngFor="let document of person.employee.personalDocuments">
+    <div class='m-2' *ngFor="let document of optDocumentFilter(person.employee.personalDocuments)">
       <fa-icon class="documentIcon" [icon]="faFileWord" size = "5x" style="margin-left: 40%;"></fa-icon>
       <app-s3-doc-downloader
-          title = "{{document.title}}"
+          title = {{document.title}}
           description={{document.comment}}
           s3FileName = {{getFileName(document.path)}}
           s3FileUrl = {{document.path}}
