--- a/src/app/hr/component/house-management/house-management.component.html
+++ b/src/app/hr/component/house-management/house-management.component.html
@@ -1,18 +1,57 @@
-<table>
+<table mat-table
+        [dataSource]="dataSource" multiTemplateDataRows
+        class="mat-elevation-z8">
+   <ng-container matColumnDef="address">
+     <th mat-header-cell *matHeaderCellDef>Address</th>
+     <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+   </ng-container>
 
-    <tr>
-        <th scope="col">Address</th>
-        <th scope="col">Landlord</th>
-        <th scope="col">Phone</th>
-        <th scope="col">Email</th>
-        <th scope="col">Number of Employees</th>
-    </tr>
-    <tbody>
-        <tr *ngFor="let houseManagementRequest of houseManagementRequests$ | async; let pos=index;">
-            <th scope="row">{{pos+1}}</th>
-            <td>{{houseManagementRequest.address}}</td>
-            <td>landlord</td>
-            <td>{{houseManagementRequest.phone}}</td>
-            <td>{{houseManagementRequest.email}}</td>
-            <td>{{houseManagementRequest.numberOfPerson}}</td>
-        </tr>
+   <ng-container matColumnDef="landlord">
+    <th mat-header-cell *matHeaderCellDef>Landlord</th>
+    <td mat-cell *matCellDef="let element"> landlord </td>
+  </ng-container>
+
+  <ng-container matColumnDef="landlordPhone">
+    <th mat-header-cell *matHeaderCellDef>Phone</th>
+    <td mat-cell *matCellDef="let element">landlord phone </td>
+  </ng-container>
+
+  <ng-container matColumnDef="landlordEmail">
+    <th mat-header-cell *matHeaderCellDef>landlord email</th>
+    <td mat-cell *matCellDef="let element"> landlord email </td>
+  </ng-container>
+
+  <ng-container matColumnDef="numberOfPerson">
+    <th mat-header-cell *matHeaderCellDef>Number of Employees</th>
+    <td mat-cell *matCellDef="let element"> {{element.numberOfPerson}} </td>
+  </ng-container>
+ 
+   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+   <ng-container matColumnDef="expandedDetail">
+     <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
+       <div class="example-element-detail"
+            [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+        <div class="example-element-diagram">
+           <div class="example-element-name"> {{element.numberOfBeds}} </div>
+           <div class="example-element-name"> {{element.numberOfMattresses}} </div>
+           <div class="example-element-name"> {{element.numberOfTables}} </div>
+           <div class="example-element-name"> {{element.numberOfChairs}} </div>
+         </div>
+         <div class="example-element-description">
+            <div class="example-element-name"> {{element.name}} </div>
+            <div class="example-element-phone"> {{element.phone}} </div>
+            <div class="example-element-email"> {{element.email}} </div>
+            <div class="example-element-car"> {{element.car}} </div>
+         </div>
+       </div>
+     </td>
+   </ng-container>
+ 
+   <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
+   <tr mat-row *matRowDef="let element; columns: columnsToDisplay;"
+       class="example-element-row"
+       [class.example-expanded-row]="expandedElement === element"
+       (click)="expandedElement = expandedElement === element ? null : element">
+   </tr>
+   <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+ </table>
