remove edit for hr
Signed-off-by: impressiveHen <b02505002@gmail.com>

--- a/src/app/employee/component/profile-contactinfo-section/profile-contactinfo-section.component.html
+++ b/src/app/employee/component/profile-contactinfo-section/profile-contactinfo-section.component.html
@@ -14,7 +14,7 @@
             <li class="list-group-item">Relationship: {{emergencyRelationship}}</li>
         </ul>
     </div>
-    <div class="card-footer">
+    <div *ngIf="role!=='hr'" class="card-footer">
         <button type="button" class="card-link btn btn-outline-success" (click)="navigateContactForm()">Edit</button>
     </div>
 </div>
