--- a/src/app/employee/component/profile-employment-section/profile-employment-section.component.html
+++ b/src/app/employee/component/profile-employment-section/profile-employment-section.component.html
@@ -13,7 +13,7 @@
             <li class="list-group-item">Employment End Date: {{employmentEndDate}}</li>
         </ul>
     </div>
-    <div class="card-footer">
+    <div *ngIf="role!=='hr'" class="card-footer">
         <button type="button" class="card-link btn btn-outline-success" (click)="navigateEmployeeForm()">Edit</button>
     </div>
 </div>
