fix employee visa page save button

--- a/src/app/employee/component/visa-status-management/visa-status-management.component.html
+++ b/src/app/employee/component/visa-status-management/visa-status-management.component.html
@@ -69,7 +69,7 @@
       <p>You have uploaded all needed documents!</p>
     </div>
     
-    <button *ngif="findDocumentByOrder(person.employee.personalDocuments) !== 'OPT STEM EAD'" class="btn btn-outline-warning m-1" (click)="onclickSave(person.firstName, person.employee.id)">Save</button>
+    <button class="btn btn-outline-warning m-1" (click)="onclickSave(person.firstName, person.employee.id)">Save</button>
     <button class="btn btn-outline-dark m-1" (click)="onclickHome(person.userId)">Back</button>
     
     <div *ngIf="uploadResponseStatus$ | async as status">
