add house management navi bar
Signed-off-by: stlchz <stellazpy@gmail.com>

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,9 @@
             <li class="nav-item">
                 <a class="nav-item nav-link" routerLink="/hr/hire" routerLinkActive="active">Hire</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-item nav-link" routerLink="/hr/houseManagement" routerLinkActive="active">House Management</a>
+            </li>
         </ul>
 
         <ul class="navbar-nav ml-auto">
