--- a/src/app/employee/component/employee-home/employee-home.component.html
+++ b/src/app/employee/component/employee-home/employee-home.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="person$ | async as person" class="p-1">
+<div *ngIf="person$ | async as person">
     <div *ngIf="person.employee.applicationWorkflow.status!=='completed'" class="my-2">
         <div class="alert alert-danger" role="alert">
             Application is not complete, STATUS: {{person.employee.applicationWorkflow.status}}.
